# 20260429_phd_experiences

./: .gitignore  .nojekyll  README.md  _brand.yml  _quarto.yml  custom.scss  index.html  index.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml
site_libs/bootstrap/: bootstrap-d4634cdb457dd36a9fb480f5465d02bb.min.css  bootstrap-dark-ddd2735d615f63b1158d0810ed4be2c0.min.css  bootstrap-dark-f3791f537b106baaa3f24142a370a4df.min.css  bootstrap-e1c3e01edc6792b1073461d384ba99ca.min.css  bootstrap-f51e447af1552fe9d9b09bf7f7df0fb0.min.css  bootstrap-fde1975d62035cc375b48a20d560b899.min.css
slides/: slides.html
src/20260429_phd_experiences/: __init__.py
